--- a/css/style.css
+++ b/css/style.css
@@ -15,29 +15,103 @@ body {
 #area-cabecalho {
   background-color: #f7b600;
   padding: 15px;
-  text-align: center;
+  text-align: center; /* alinhar o texto*/
+}
+/* ************************* */
+
+#area-principal {
+  width: 920px;
+  margin: 0 auto; /* centralizar a div*/
+  padding: 15px;
 }
 
 #area-logo, #area-menu {
   padding: 10px;
 }
+
+#area-postagens {
+  width: 660px;
+  float: left;
+}
+
+#area-lateral {
+  width: 240px;
+  float: right;
+}
+
+.postagem {
+  padding: 20px;
+  margin-bottom: 20px;
+  background: white;
+}
+
+.conteudo-lateral {
+  background: white;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+#rodape {
+   clear: both;
+  text-align: center;
+  padding: 15px;
+  background: #CCC;
+}
+
+.postagem-lateral {
+  font-size: 0.8em;
+  padding: 20px;
+  border-bottom: 1px dotted #ccc;
+}
 /* Formatação do Menu*/
+
 a{
   text-decoration: none;
 }
+
   a:link, a:visited {
-    color: #FFF;
-    padding: 10px 8px;
+    color: #f7b600;
   }
-  a:hover {
+
+   a:hover {
+    text-decoration: underline;
+  }
+
+#area-cabecalho  a:link, #area-cabecalho a:visited {
+    color: #FFF;
+    padding: 8px 12px;
+  }
+
+  #area-cabecalho a:hover {
     color: #f7b600;
     background: white;
+    border-radius: 8px;
+    text-decoration: none;
   }
+
 /* Formatações Gerais*/
 
 h1 {
   color: #4e4e4e;
-  font-size: 1.5em;
+  font-size: 2.5em;
+}
+
+h2 {
+  color: #f7b600;
+}
+
+h3 {
+  color: #565656;
+  background: #CCC;
+  padding: 5px;
+}
+
+.datapostagem {
+  font-size: 0.8em;
+  border-bottom: 1px solid #f4f4f4;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  display: block;
 }
 
 .branco {
